@@ -3,7 +3,7 @@ package org.reactivetoolbox.eventbus;
 import org.junit.jupiter.api.Test;
 import org.reactivetoolbox.core.functional.Pair;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -43,8 +43,8 @@ class PathTest {
         final var path = Path.of("/one/{param1}");
 
         assertTrue(path.hasParams());
-        assertEquals(Arrays.asList("param1"), path.parameterNames());
-        assertEquals(Arrays.asList(Pair.of("param1", "value1")), path.extractParameters("/one/value1"));
+        assertEquals(List.of("param1"), path.parameterNames());
+        assertEquals(List.of(Pair.of("param1", "value1")), path.extractParameters("/one/value1"));
     }
 
     @Test
@@ -52,9 +52,9 @@ class PathTest {
         final var path = Path.of("/one/{param1}/{param2}/some_other_text");
 
         assertTrue(path.hasParams());
-        assertEquals(Arrays.asList("param1", "param2"), path.parameterNames());
-        assertEquals(Arrays.asList(Pair.of("param1", "value1"),
-                                   Pair.of("param2", "value2")),
+        assertEquals(List.of("param1", "param2"), path.parameterNames());
+        assertEquals(List.of(Pair.of("param1", "value1"),
+                             Pair.of("param2", "value2")),
                      path.extractParameters("/one/value1/value2/some_other_text"));
     }
 }
